<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ultraLight"
    android:orientation="vertical"
    tools:context=".ui.main.BookFragment">

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bookCover"
                android:layout_width="167dp"
                android:layout_height="184dp"
                android:src="@drawable/book" />

            <TextView
                android:id="@+id/bookTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Forest"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bookAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Li Bla vla"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/preOrderButton"
                style="@style/DisabledButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/pre_order" />

            <Button
                android:id="@+id/addToCartButton"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/add_to_cart" />

            <Button
                android:id="@+id/addToFavoritesButton"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/add_to_favorites" />

            <TextView
                android:id="@+id/bookPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="20,70"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="35sp"
                android:textStyle="italic" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/bookDescription"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="The Dark Forest is a 2008 science fiction novel by the Chinese writer Liu Cixin. It is the sequel to the Hugo Award-winning novel The Three-Body Problem."
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/subscribeButton"
        style="@style/Button"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/subscribe" />

</LinearLayout>

